# debug-gym

./: .gitignore  .pre-commit-config.yaml  =0.19.1  CHANGELOG.md  MANIFEST.in  RAG_IMPROVEMENTS.md  README.md  RESPONSIBLE_AI.md  RETRIEVAL_SERVICE.md  aider_full.sh  analyze_results.py  easy_problems.txt  frogboss.py  llm.cfg.template  llm.template.yaml  output.txt  pr_description.md  pyproject.toml  pytest.ini  requirements.txt  rubrics.txt  smol.py  smol_rloo.py  sweagent_buggen_test_traces2_t40_chosen.json  test_rag_improvements.py
.devcontainer/: devcontainer.json
agent/: __init__.py  example_agent.py  llm_api.py
analysis/: README.md  analyse_diff.py  analyse_diff_aider.py  analyse_o1_swe.py  analyse_overlap_btw_rows.py  analyse_overlap_btw_rows_swe.py  analyse_pdb_type.py  analyse_pdb_type_aider.py  analyse_rewrite_length_swe.py  analyse_tool_use_swe.py  analyse_win_mini_nightmare.py  analyse_win_swe.py  comparisons_aider.py  figure_10.py  figure_11.py  figure_12.py  figure_5.py  figure_6.py  figure_7.py  figure_9.py  figure_episode_length_and_response_token.py  figure_episode_length_and_response_token_aider.py  figure_episode_length_and_response_token_swe.py  figure_success_rate_rewrite.py  find_rewrite_test.py  gather_results_aider.py  gather_results_swe_bench.py  gather_results_terminal_simulator.py  parse_folders.jsonl  success_rewrite.py
configs/: aider.yaml  config.yaml  free_env.yaml  local.yaml  mini_nightmare.yaml  r2egym.yaml  simple.yaml  solution_agent.yaml  swebench.yaml  swebench_debug.yaml  swebench_swe_agent.yaml  sweqa.yaml  swesmith.yaml
(+383 files in other folders)
