[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "froggy"
version = "0.0.1"
description = "froggy - interactive coding agent"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}
