[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-gym"
version = "0.0.1"
description = "debug-gym - interactive debugging environment"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = [".*tests.*", "exps/*", "output_*"]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-asyncio",
]